<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/statusView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/salesLeadRating"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:padding="0dp"
            android:text="@string/sales_lead_status"
            tools:ignore="MissingConstraints" />

        <Spinner
            android:id="@+id/salesLeadPriority"
            android:layout_width="246dp"
            android:layout_height="34dp"
            android:layout_below="@id/priorityView"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:entries="@array/priority_values"
            android:padding="0dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/salesLeadType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/salesLeadName"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/sales_lead_type"
            android:inputType="textPersonName"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/salesLeadName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/errorText"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/sales_lead_name"
            android:inputType="textPersonName"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/salesLeadPriority"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="modifySalesLead"
            android:padding="0dp"
            android:text="@string/modify" />

        <RatingBar
            android:id="@+id/salesLeadRating"
            android:layout_width="243dp"
            android:layout_height="42dp"
            android:layout_below="@id/ratingView"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:padding="0dp" />

        <Spinner
            android:id="@+id/salesLeadStatus"
            android:layout_width="246dp"
            android:layout_height="34dp"
            android:layout_below="@id/statusView"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:entries="@array/status_values"
            android:padding="0dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/priorityView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/salesLeadStatus"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:padding="0dp"
            android:text="@string/sales_lead_priority"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/ratingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/salesLeadType"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:padding="0dp"
            android:text="@string/sales_lead_rating"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="goBack"
            android:padding="0dp"
            android:text="Back" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleView"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:padding="0dp"
            android:textColor="#FF0000" />

        <TextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:padding="0dp"
            android:text="@string/modify_sales_lead"
            android:textSize="30sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>